# aind-ophys-mesoscope-image-splitter

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: full_field_utils.py  run  run_capsule.py  splitter.py  tiff_metadata.py
environment/: Dockerfile
metadata/: metadata.yml
tests/: conftest.py  full_field_tiff_utils.py  test_full_field_utils.py  test_malformed_tiff.py  test_malformed_zstack.py  test_mapper_mixin.py  test_mesoscope_splitter.py  test_roi_center_finding.py  test_roi_insertion.py  test_splitter.py  test_tiff_metadata.py  test_tiff_splitter.py  test_timeseries_utils.py  utils.py
