[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mesoscope_file_splitter"
description = "De-interleave tiff files acquired on the Mesoscope"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "aind-ophys-utils==0.0.7",
    "h5py==3.10.0",
    "numpy==1.26.4",
    "scikit-image==0.22.0",
    "tifffile==2024.2.12"
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "interrogate",
    "isort",
    "Sphinx",
    "furo",
    "aind-data-access-api[full]"
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "mesoscope_file_splitter.__version__"}

[tool.black]
line-length = 100
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["mesoscope_file_splitter", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
